--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "node": ">=14"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@types/styled-components": "^5.1.26",
     "glsl-random": "^0.0.5",
     "next": "^13.0.1",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.0.1",
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.6",
     "three": "^0.146.0",
     "three-stdlib": "^2.17.3"
   },
@@ -36,7 +41,6 @@
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "raw-loader": "^4.0.2",
-    "tailwindcss": "^3.2.1",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1"
   },
